--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
         <h1>
             WELCOME TO MY WEB PAGE!
         </h1>
+        <h2> Hello </h2>
         Hello, world!
         </body>
 </html>
