--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello</title>
     </head>
     <body>
-        <h1>
+        <h1 style="color: blue;">
             WELCOME TO MY WEB PAGE!
         </h1>
         <h2> Hello </h2>
