--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 style="color: blue;">
-            WELCOME TO MY WEB PAGE!!
+            WELCOME TO MY WEB PAGE!
         </h1>
         <h2> Hello </h2>
         Hello, world!
